hphp/hack/test/typecheck/enum/bad/enum_0.php
<?hh

abstract class Enum<T> {
}

// Should fail because it doesn't match
class Foo extends Enum<int> {
  const string FOO = "foo";
}
